# simple-rule34-api

./: README.md  Rule34.py  pyproject.toml  setup.py
aio/: types.py  utils.py
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
rule34_simple_api.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  types.py  utils.py
src/SimpleRule34/: Rule34.py  exceptions.py  setup.py  types.py  utils.py
src/SimpleRule34/aio/: ARule34.py  utils.py
src/aio/: ARule34.py
src/simple_rule34.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simple_rule34_STARMAN12.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
