[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_rule34"
version = "0.1.2"
authors = [
  { name="StarMan12", email="author@example.com" },
]
description = "Simple api wrapper of rule34.xxx for python with asynchronous support"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['aiohttp==3.8.4',
    'aiosignal==1.3.1',
    'async-timeout==4.0.2',
    'attrs==23.1.0',
    'certifi==2023.5.7',
    'charset-normalizer==3.2.0',
    'docopt==0.6.2',
    'frozenlist==1.4.0',
    'idna==3.4',
    'multidict==6.0.4',
    'pipreqs==0.4.13',
    'requests==2.31.0',
    'urllib3==2.0.3',
    'yarg==0.1.9',
    'yarl==1.9.2']

[project.urls]
"Homepage" = "https://github.com/Loshok229/rule34-simple-api"
"Bug Tracker" = "https://github.com/Loshok229/rule34-simple-api/issues"